# confluence_ai

./: README.md  pyproject.toml  requirements.txt
agent_army/: hooks.py  install.py  modules.txt
agent_army/agent_army/doctype/agent_army_settings/: agent_army_settings.json  agent_army_settings.py
agent_army/agent_army/doctype/ai_access_token/: ai_access_token.json
agent_army/api/: control.py  ingest.py  status.py  webhook.py
agent_army/services/: acp.py  auth.py  callbacks.py  dispatcher.py  executor.py  livekit.py  llm.py  mcp.py  scheduler.py  utils.py  whatsapp_bridge.py
agent_army/tests/: test_auth.py  test_ingest.py  test_mcp.py  test_utils.py
confluence_ai/: create_mock_campaign.py  create_token.py  hooks.py  install.py  list_doctypes.py  modules.txt  print_counts.py  print_detailed_routes.py  print_routes.py  print_tokens.py  test_gateway_api.py
confluence_ai.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
confluence_ai/api/: call_log.py  control.py  inbound.py  ingest.py  mcp.py  status.py  webhook.py
confluence_ai/confluence_ai/: list_doctypes.py  test_concurrency.py  workspace_creator.py
confluence_ai/services/: acp.py  auth.py  callbacks.py  dispatcher.py  embeddings.py  event_router.py  executor.py  inbound_sales.py  knowledge_base.py  livekit.py  llm.py  mcp.py  sales_context.py  sales_disease_router.py  scheduler.py  url_ingest.py  utils.py  vobiz.py  whatsapp_bridge.py  whatsapp_templates.py
confluence_ai/tests/: test_agent_prompts.py  test_auth.py  test_event_router.py  test_ingest.py  test_mcp.py  test_native_mcp.py  test_utils.py
(+95 files in other folders)
