[project]
name = "confluence_ai"
version = "0.0.1"
description = "Confluence AI — Frappe AI agent orchestration platform"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "SRIAAS", email = "webdevelopersriaas@gmail.com" }
]
dependencies = [
    "requests",
    "livekit-api",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["confluence_ai*"]

[tool.bench.frappe-dependencies]
frappe = ">=15.0.0,<17.0.0"

[tool.ruff]
line-length = 110
target-version = "py310"
